# ufo-ir

./: .gitignore  CMakeLists.txt  README.md  json-sample-v2.json  json-sample.json  ufo-ir-task.c
core/: CMakeLists.txt
core/src/: ufo-method-iface.c  ufo-parallel-geometry.h  ufo-processor.c  ufo-projector.h  ufo-scalar.h
core/ufo/: CMakeLists.txt  ufo-ir-enums.c.template  ufo-ir.pc.in  ufoir.pc.in
core/ufo/ir/: ufo-geometry.c  ufo-ir-method.c  ufo-ir-method.h  ufo-ir.h  ufo-method-iface.c  ufo-prior-knowledge.c  ufo-processor.c  ufo-processor.h  ufo-projector.c  ufo-sparsity-iface.c  ufo-sparsity-iface.h  ufo-transform-iface.c
modules/: CMakeLists.txt
modules/src/: CMakeLists.txt  main.c  ufo-cl-projector.c  ufo-custom-sparsity.c  ufo-custom-sparsity.h  ufo-gradient-sparsity.h  ufo-ir-asdpocs.c  ufo-ir-asdpocs.h  ufo-ir-sart.h  ufo-parallel-geometry.c  ufo-parallel-geometry.h  ufo-prior-knowledge.c  ufo-scalar.c
plugins/: CMakeLists.txt
plugins/src/: CMakeLists.txt  projector-parallel-joseph.cl  sparsity-gradient.cl  ufo-common-routines.c  ufo-geometry.h  ufo-gradient-sparsity.c  ufo-ir-method.c  ufo-ir-task.c  ufo-method-iface.h  ufo-sparsity-iface.c  ufo-transform-iface.c  ufo-transform-iface.h
src/: CMakeLists.txt  calls_stack.txt  main.c  projector-parallel-joseph.cl  ufo-basic-ops.cl  ufo-cl-parallel-geometry.h  ufo-cl-projector.c  ufo-cl-projector.h  ufo-common-routines.c  ufo-common-routines.h  ufo-custom-sparsity.c  ufo-geometry.c  ufo-geometry.h  ufo-gradient-sparsity.c  ufo-ir-asdpocs-task.c  ufo-ir-asdpocs-task.h  ufo-ir-asdpocs.c  ufo-ir-asdpocs.h  ufo-ir-basic-ops.c  ufo-ir-basic-ops.h  ufo-ir-dummy-task.c  ufo-ir-dummy-task.h  ufo-ir-enums.c.template  ufo-ir-enums.h.template  ufo-ir-geometry.c  ufo-ir-geometry.h  ufo-ir-method-task-node.c  ufo-ir-method-task-node.h  ufo-ir-method-task.c  ufo-ir-method-task.h  ufo-ir-method.c  ufo-ir-method.h  ufo-ir-parallel-projector-task.c  ufo-ir-parallel-projector-task.h  ufo-ir-projector-task.c  ufo-ir-projector-task.h  ufo-ir-sart-task.c  ufo-ir-sart-task.h  ufo-ir-sart.c  ufo-ir-sart.h  (+27 more)
src/core/: ufo-ir-basic-ops-processor.c  ufo-ir-basic-ops-processor.h  ufo-ir-basic-ops.c  ufo-ir-debug.c  ufo-ir-debug.h  ufo-ir-gradient-processor.c  ufo-ir-gradient-processor.h  ufo-ir-gradient-task.c  ufo-ir-gradient-task.h  ufo-ir-method-task.c  ufo-ir-projector-task.c  ufo-ir-projector-task.h  ufo-ir-state-dependent-task.c  ufo-ir-state-dependent-task.h
src/kernels/: projector-parallel-joseph.cl  ufo-ir-basic-ops.cl  ufo-ir-gradient-processor.cl  ufo-math-tvstd-method.cl
src/tasks/: ufo-ir-asdpocs-task.c  ufo-ir-asdpocs-task.h  ufo-ir-dummy-task.c  ufo-ir-parallel-projector-task.c  ufo-ir-parallel-projector-task.h  ufo-ir-sart-task.c  ufo-ir-sart-task.h  ufo-ir-sbtv-task.c  ufo-ir-sbtv-task.h  ufo-ir-sirt-task.c  ufo-ir-sirt-task.h  ufo-ir-splitbregman-task.c
test/: CMakeLists.txt
test/src/: CMakeLists.txt  main.c
ufo-ir-core/: CMakeLists.txt
ufo-ir-core/common/cmake/: ConfigurePaths.cmake
ufo-ir-core/src/: CMakeLists.txt  ufo-geometry.c  ufo-geometry.h  ufo-ir-geometry.c  ufo-ir-geometry.h  ufo-ir-method.c  ufo-ir-method.h  ufo-ir-prior-knowledge.c  ufo-ir-prior-knowledge.h  ufo-ir-projector.c  ufo-ir-projector.h  ufo-ir-sparsity-iface.c  ufo-ir-sparsity-iface.h  ufo-ir.h  ufo-prior-knowledge.c  ufo-prior-knowledge.h  ufo-projector.c  ufo-projector.h  ufo-sparsity-iface.c  ufoir.pc.in
ufo-ir-plugins/: CMakeLists.txt
ufo-ir-plugins/src/: CMakeLists.txt  ufo-gradient-sparsity.c  ufo-ir-asdpocs-method.c  ufo-ir-asdpocs-method.h  ufo-ir-asdpocs.c  ufo-ir-cgls-method.c  ufo-ir-cgls-method.h  ufo-ir-cl-projector.c  ufo-ir-cl-projector.h  ufo-ir-custom-sparsity.c  ufo-ir-custom-sparsity.h  ufo-ir-gradient-sparsity.c  ufo-ir-gradient-sparsity.h  ufo-ir-linearized-bregman-method.c  ufo-ir-linearized-bregman-method.h  ufo-ir-parallel-geometry.c  ufo-ir-parallel-geometry.h  ufo-ir-sart-method.c  ufo-ir-sart-method.h  ufo-ir-sart.c  ufo-ir-sart.h  ufo-ir-sbtv-method.c  ufo-ir-sbtv-method.h  ufo-ir-sirt-method.c  ufo-ir-sirt-method.h
ufo-ir-plugins/src/kernels/: projector-parallel-joseph.cl  sb-gradient.cl  ufo-ir-linearized-bregman-method.cl
ufo-math-plugins/: CMakeLists.txt
ufo-math-plugins/common/cmake/: FindOpenCL.cmake
ufo-math-plugins/src/: CMakeLists.txt  ufo-math-shrinkage-method.c  ufo-math-shrinkage-method.h  ufo-math-tvstd-method.c  ufo-math-tvstd-method.h
ufo-math-plugins/src/kernels/: shrinkage.cl
ufo-methods/: .gitignore  CMakeLists.txt
ufo-methods/src/: CMakeLists.txt  ufo-common-routines.c  ufo-common-routines.h  ufo-method-iface.c  ufo-method-iface.h  ufo-methods-enums.c.template  ufo-methods-enums.h.template  ufo-processor.c  ufo-processor.h  ufo-transform-iface.c  ufo-transform-iface.h  ufomethods.pc.in
